# askii

./: .dockerignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  release.sh
.github/workflows/: ci.yml  release.yml
ci/: Aptfile  Dockerfile  build.sh
src/: editor.rs  main.rs  ui.rs
