[package]
name = "askii"
description = "TUI based ASCII diagram editor."
version = "0.6.1"
authors = ["nytopop <ericizoita@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/nytopop/askii"
repository = "https://github.com/nytopop/askii.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "*"
log = "*"
lazy_static = "*"
parking_lot = "*"
line_drawing = "*"
pathfinding = "*"
num-traits = "*"
clipboard = "*"

[dependencies.cursive]
version = "0.20"
default-features = false
features = ["termion-backend", "unstable_scroll"]
